--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 function displayGifs(){
                 var superhero = $(this).attr("data-name");
-    		    var queryURL = "http://api.giphy.com/v1/gifs/search?q=" + superhero + "&api_key=MxrM5zad2hyBT2nYddtPhslSr0rDAlXx&limit=10";
+    		    var queryURL = "https://api.giphy.com/v1/gifs/search?q=" + superhero + "&api_key=MxrM5zad2hyBT2nYddtPhslSr0rDAlXx&limit=10";
 
                 $.ajax({
                  url: queryURL,
